Fixed broken tests.